# zeroproof-travel-poc

./: .gitignore  ARCHITECTURE.md  QUICK_START_UNIVERSAL_VERIFIER.md  README.md  VERIFICATION_COMPLETE.txt  docker-compose.yaml  setup-sp1.sh
agent-a/: Cargo.toml  TAP_CODE_EXAMPLES.md  TAP_COMPLETION_SUMMARY.md  TAP_DELIVERABLES.md  TAP_IMPLEMENTATION_SUMMARY.md  TAP_INTEGRATION_GUIDE.md  TAP_QUICK_REFERENCE.md
agent-a/mcp-client/: Cargo.toml  Dockerfile
agent-a/mcp-client/src/: http_server.rs  lib.rs  main.rs  orchestration.rs  proof_db.rs  proxy_fetch.rs  tap_http_client.rs  tap_signature.rs
agent-a/mcp-server/: Cargo.toml  Dockerfile  README.md
agent-a/mcp-server/src/: lib.rs  main.rs
agent-a/src/: main.rs
agent-b/: Cargo.toml  Dockerfile
agent-b/mcp-server/: Cargo.toml
agent-b/mcp-server/src/: main.rs
agent-b/pricing-core/: Cargo.toml
agent-b/pricing-core/src/: booking.rs  lib.rs  pricing.rs
agent-b/program/: Cargo.toml
agent-b/program/src/: lib.rs
agent-b/server/: Cargo.toml
agent-b/server/src/: main.rs  zk_adapter.rs
ai-agent/: Dockerfile  package-lock.json  package.json
ai-agent/public/: index.html
ai-agent/src/: App.css  App.tsx
charts/agent-a-mcpc/: Chart.yaml  values.yaml
charts/agent-a-mcpc/templates/: 00-serviceaccount.yaml  02-configmap.yaml  04-deployment.yaml
charts/agent-b-mcps/: Chart.yaml  values.yaml
charts/agent-b-mcps/templates/: 02-configmap.yaml  04-deployment.yaml
charts/ai-agent/: values.yaml
charts/ai-agent/templates/: 02-configmap.yaml  04-deployment.yaml
contracts/: DEPLOY.md  README.md  foundry.toml
contracts/script/: DeployZeroProof.s.sol
contracts/src/: ZeroProof.sol
contracts/src/interfaces/: IReclaimVerifier.sol  ISP1Verifier.sol
contracts/test/: ZeroProof.t.sol
infra/: agent_a_mcp_client_stack.py  agent_a_mcp_server_stack.py  agent_b_mcp_server_stack.py  ai_agent_web_stack.py  app.py
sp1-verifier-deploy/: .env.example  DEPLOY.md
sp1-verifier-deploy/script/: DeploySP1Verifier.s.sol
sp1-verifier-deploy/src/: SP1VerifierGroth16.sol
zk-attestation-service/: Cargo.toml  DEPLOY.md  build-circuit.rs  foundry.toml
zk-attestation-service/attester/: Cargo.toml
zk-attestation-service/attester/src/: build_circuit.rs  main.rs
zk-attestation-service/cache/: solidity-files-cache.json
zk-attestation-service/contracts/: README.md  ZeroProofVerifier.sol
zk-attestation-service/program-template/: Cargo.toml
zk-attestation-service/program-template/src/: lib.rs
zk-attestation-service/script/: Deploy.s.sol
zk-protocol/: Cargo.toml
zk-protocol/src/: lib.rs
zkfetch-wrapper/: 03 - SIGNATURE_ANALYSIS.md  package.json  proof-structure.json
