[package]
name = "agent-a"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
ethers = { version = "2.0", features = ["abigen"] }

# General protocol for ZK attestation - no dependency on specific agents
zk-protocol = { path = "../zk-protocol" }