[workspace]
members = [
    "pricing-core",
    "server",
    "program",
]
resolver = "2"

# ===================================================================
# Common dependencies shared by both crates
# ===================================================================
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-zkvm = "5.0.8"
sp1-sdk = "5.0.8"
sp1-build = "5.0.8"
hex = "0.4"
sha2 = "0.10"

# ===================================================================
# Patch section – ensures both crates use the exact same SP1 version
# ===================================================================
[patch.crates-io]