[package]
name = "mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async utilities
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# Logging utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Base64 encoding for proxy authentication
base64 = "0.22"

# URL encoding/decoding for query parameters
urlencoding = "2.1"

# Date and time parsing
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Lazy static initialization
lazy_static = "1.4"

[[bin]]
name = "mcp-client"
path = "src/main.rs"

[[bin]]
name = "mcp-client-http"
path = "src/http_server.rs"
