[package]
name = "agent-b-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP & REST
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Local pricing core
pricing-core = { path = "../pricing-core" }

[profile.release]
opt-level = 3
lto = true
strip = true
