[package]
name = "agent-b-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["json", "multipart"] }
bincode = "1.3"
hex = { version = "0.4" }
sha2 = { version = "0.10" }
sp1-sdk = { workspace = true }

pricing-core = { path = "../pricing-core" }