[package]
name = "attester"
version = "0.1.0"
edition = "2024"
default-run = "attester"

[[bin]]
name = "attester"
path = "src/main.rs"

[[bin]]
name = "build-circuit"
path = "src/build_circuit.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sp1-sdk = "5.0.8"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18"

zk-protocol = { path = "../../zk-protocol" }